force-app/main/default/objects/sbaa__ApprovalRule__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Line</relationshipLabel>
    <relationshipName>OrderItem_ApprovalRules</relationshipName>
    <type>Lookup</type>
</CustomField>