force-app/main/default/objects/sbaa__ApprovalRule__c/fields/PMC_CPQ_Description__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>