force-app/main/default/objects/sbaa__ApprovalRule__c/listViews/sbaa__ActiveRules.listView-meta.xml
<ListView>
    <fullName>sbaa__ActiveRules</fullName>
    <columns>NAME</columns>
    <columns>sbaa__TargetObject__c</columns>
    <columns>sbaa__Active__c</columns>
    <columns>sbaa__ConditionsMet__c</columns>
    <columns>sbaa__ApprovalStep__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sbaa__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Rules</label>
</ListView>