force-app/main/default/objects/sbaa__ApprovalRule__c/listViews/sbaa__All.listView-meta.xml
<ListView>
    <fullName>sbaa__All</fullName>
    <columns>NAME</columns>
    <columns>sbaa__Active__c</columns>
    <columns>sbaa__ConditionsMet__c</columns>
    <columns>sbaa__ApprovalStep__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>